# serde_someip

./: Cargo.toml  Readme.md  ReleaseNotes.md
.github/workflows/: rust.yml
serde_someip/: Cargo.toml  LICENSE-MIT  Readme.md
serde_someip/derive_tests/failures/: invalid_enums.rs  invalid_enums.stderr  invalid_structs.rs  invalid_structs.stderr  invalid_structs_newtypes.rs  invalid_structs_newtypes.stderr  struct_empty.rs  struct_empty.stderr  struct_tuple.rs  struct_tuple.stderr  union.rs  union.stderr
serde_someip/derive_tests/successes/: enum.rs  struct.rs  struct_newtype.rs
serde_someip/src/: de.rs  error.rs  length_fields.rs  lib.rs  options.rs  ser.rs  types.rs  wire_type.rs
serde_someip_derive/: Cargo.toml  LICENSE-APACHE  Readme.md
serde_someip_derive/src/: attribute.rs  enums.rs  lib.rs  structs.rs
