[package]
name = "serde_someip"
version = "0.1.1"
edition = "2021"
authors = ["Morten Mey <morten.mey@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A SOME/IP serialization format"
homepage = "https://github.com/MortronMeymo/serde_someip"
repository = "https://github.com/MortronMeymo/serde_someip"
keywords = ["serde", "serialization", "someip"]
categories = ["encoding"]

[features]
# Provide derive(SomeIp) macro.
derive = ["serde_someip_derive"]

[dependencies]
serde = "1.0"
serde_someip_derive = { path = "../serde_someip_derive", version = "0.1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.1", features = ["serde"] }
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true