[package]
name = "serde_someip_derive"
version = "0.2.0"
edition = "2021"
authors = ["Morten Mey <morten.mey@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Macros implementation of #[derive(SomeIp)]"
homepage = "https://github.com/MortronMeymo/serde_someip"
repository = "https://github.com/MortronMeymo/serde_someip"
keywords = ["serde", "serialization", "someip"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
